--- a/runtime-testsuite/pom.xml
+++ b/runtime-testsuite/pom.xml
@@ -41,7 +41,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
-			<artifactId>antlr4-runtime</artifactId>
+			<artifactId>antlr4-runtime-teavm-compatible</artifactId>
 			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
